# labonneboite-importer

./: .dockerignore  .execute.sh  .gitignore  .gitlab-ci.yml  Makefile  README.md  docker-compose.dev.yml  docker-compose.testing.yml  docker-compose.yml  dockerfile_nginx  init.sh  mkdocs.yml  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  setup.cfg  sonar-project.properties
.github/workflows/: ci.yml  deploy.yml
airflow/: Dockerfile  airflow.cfg
docker/: Dockerfile  airflow.cfg  permissions.sh
docker/entrypoints/: init.sh  test.sh
docs/: index.md
importer/: airflow.cfg
importer-mysql/docker-entrypoint-initdb.d/: 0.set_default_character_set_default_collate.sql
importer/alembic/: env.py
importer/alembic/versions/: 61796506530c_set_mysql_charset_and_collate.py  cbbc9792dcb4_create_exportableoffice_table.py  f9d537971656_fix_etablissements_columns_collation_.py  fc72870a4b48_replace_score_by_hiring.py
importer/dags/: load_etablissements.py
importer/plugins/common/: custom_types.py  types.py
importer/plugins/models/: __init__.py
importer/plugins/operators/: api_adresse.py  extract_offices.py  extract_scores.py  find_last_file.py  tarfile.py
importer/plugins/utils/: __init__.py  codecommune.csv  codecommune.py  csv.py  get_departement_from_zipcode.py  mysql_hook.py
importer/settings/: alembic.ini  default.json  docker.json
importer/tests/: conftest.py
importer/tests/dags/: dags_integrity_tests.py
importer/tests/data/: .gitignore  invalid.tar
importer/tests/data/invalids/: etablissements_with_extra_row.csv
importer/tests/data/lbb-output-wf-202202150303-extracted/etablissements/: etablissements.csv
importer/tests/data/lbb-output-wf-202202150303-extracted/inference/indicateurs-performance/: indicateurs_global.csv  indicateurs_par_dep.csv  indicateurs_par_naf.csv
importer/tests/data/lbb-output-wf-202202150303-extracted/inference/predictions/: predictions.csv
importer/tests/data/lbb-output-wf-202202150303-extracted/ire/: ire.csv
importer/tests/data/prod/: lbb-output-wf-202202150303.tar
importer/tests/operators/: api_adresse_tests.py  extract_offices_tests.py  extract_scores_tests.py  find_last_file_test.py  find_last_file_tests.py  tarfile_test.py  tarfile_tests.py
importer/tests/utils/: get_department_from_zipcode_tests.py  mysql_hook_test.py  mysql_hook_tests.py
nginx/etc/nginx/sites-enabled/: importer.conf
nginx/etc/nginx/sites-enabled/.ssl/: ssl.conf
old/: requirements.dev.in  requirements.dev.txt
