[tool.poetry]
name = "lbb-importer"
version = "0.1.0"
description = "The importer job is to recreate from scratch a complete dataset of offices base on a mapping of a SIRET and a score."
authors = ["La Bonne Boite <labonneboite@pole-emploi.fr>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
[tool.poetry.dependencies]
python = "^3.10"
# labonneboite dependency
labonneboite-common = "0.5.3"
flower = "^1.2.0"
redis = "^4.3.1"
# apache-airflow="^2.4.1" # useless because of the docker 
apache-airflow-providers-mysql="^3.2.1"
psycopg-binary="^3.1.3"
psycopg2="^2.9.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
flake8 = "^5.0.4"
flake8-junit-report = "^2.1.0"
coverage = "^6.4.4"
mypy = "^0.982"


[tool.poetry.group.help.dependencies]
mkdocs = "^1.4.1"
mkdocs-material = "^8.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --cov-fail-under  90"
testpaths = [
    "tests"
]

python_files = "*_tests.py"

[tool.coverage.run]
branch = true
parallel = true
concurrency = ["multiprocessing"]

[tool.coverage.report]
precision = 1
show_missing = true
ignore_errors = true
exclude_lines =[
    "pragma: no cover",
    "raise NotImplementedError",
    "def __repr__",
    "if settings.DEBUG",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:"
    ]
omit = [
    "*/test*",
    "*/migrations/*",
    "manage.py",
    "venv/*"
    ]
